# sandwich

./: .gitignore  LICENSE  Makefile  README.md  benchmark.py  pyproject.toml
data/: babelnet_license.txt
sandwich/: __init__.py  metrics.py  utils.py
