[tool.poetry]
name = "sandwich"
version = "0.1.0"
description = "Official inference implemetation of the SANDWICH paper"
authors = ["DanielGuzmanOlivares <danielguzmanolivares@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.40.0"
pytest = "^8.2.0"
torch="2.5.1"
sentencepiece = "^0.2.0"
protobuf = "^5.26.1"
sentence-transformers = "^2.7.0"
accelerate = "^1.3.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
